--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/images/logo.png" />
-		<link href="/css/boxicons.min.css" rel="stylesheet" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
 
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<title>%sveltekit.title%</title>
+	<link rel="icon" href="%sveltekit.assets%/images/logo.png" />
+	<link href="/css/boxicons.min.css" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width" />
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
