--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>%sveltekit.title%</title>
+	<title>Excursia</title>
 	<link rel="icon" href="%sveltekit.assets%/images/logo.png" />
 	<link href="/css/boxicons.min.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width" />
